RESOLVED FIXED149189
Style invalidation affecting siblings does not work with inline-style changes
https://bugs.webkit.org/show_bug.cgi?id=149189
Summary Style invalidation affecting siblings does not work with inline-style changes
Benjamin Poulain
Reported 2015-09-15 15:09:57 PDT
Style invalidation affecting siblings does not work with inline-style changes
Attachments
Patch (19.25 KB, patch)
2015-09-15 15:16 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2015-09-15 15:16:51 PDT
Antti Koivisto
Comment 2 2015-09-15 16:01:28 PDT
r=me
Benjamin Poulain
Comment 3 2015-09-15 18:32:00 PDT
Comment on attachment 261246 [details] Patch Clearing flags on attachment: 261246 Committed r189836: <http://trac.webkit.org/changeset/189836>
Benjamin Poulain
Comment 4 2015-09-15 18:32:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.